pong and walking fixes